compiler-plugin/testData/diagnostics/internalStationEntry.kt
@StationEntry
internal class <!TARGET_MUST_BE_PUBLIC!>FooActivity<!> : CommonActivity<Unit>()
